--- a/templates/base.html
+++ b/templates/base.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %} | 맛집에 미치다</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-            crossorigin="anonymous"></script>
+        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+        crossorigin="anonymous"></script>
     <style>
-
-
-        .main{
-             background-color: green;
+        .main {
+            background-color: green;
             color: white;
             height: 700px;
 
@@ -29,75 +28,76 @@
             background-size: cover;
         }
 
-                .mycards {
+        .mycards {
             width: 1000px;
             margin: 100px auto 100px auto;
 
         }
     </style>
 </head>
+
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container px-4 px-lg-5">
-{#        <--!타이틀-->#}
-        <a class="navbar-brand" href="#!">친한사2조</a>
-        {#                {% if  user.is_authenticated %}#}
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
-                class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="#!">글쓰기</a></li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
-                       data-bs-toggle="dropdown" aria-expanded="false">지역선택</a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#!">모든 지역</a></li>
-                        <li><a class="dropdown-item" href="#!">서울</a></li>
-                        <li><a class="dropdown-item" href="#!">경기도</a></li>
-                        <li><a class="dropdown-item" href="#!">강원도</a></li>
-                        <li><a class="dropdown-item" href="#!">충청도</a></li>
-                        <li><a class="dropdown-item" href="#!">전라도</a></li>
-                        <li><a class="dropdown-item" href="#!">경상도</a></li>
-                        <li><a class="dropdown-item" href="#!">제주도</a></li>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container px-4 px-lg-5">
+            {# <--!타이틀-->#}
+                <a class="navbar-brand" href="/">친한사2조</a>
+                {% if user.is_authenticated %}
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation"><span
+                        class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="/">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/post/create/">글쓰기</a></li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">지역선택</a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="#!">모든 지역</a></li>
+                                <li><a class="dropdown-item" href="#!">서울</a></li>
+                                <li><a class="dropdown-item" href="#!">경기도</a></li>
+                                <li><a class="dropdown-item" href="#!">강원도</a></li>
+                                <li><a class="dropdown-item" href="#!">충청도</a></li>
+                                <li><a class="dropdown-item" href="#!">전라도</a></li>
+                                <li><a class="dropdown-item" href="#!">경상도</a></li>
+                                <li><a class="dropdown-item" href="#!">제주도</a></li>
+                            </ul>
+                        </li>
                     </ul>
-                </li>
-            </ul>
-            {#                    {% endif %}#}
-            <form class="form-inline my-2 my-lg-0">
-                {#                        {% if not user.is_authenticated %}#}
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/sign-in"> Sign In <span class="sr-only"></span></a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/sign-up"> Sign Up <span class="sr-only"></span></a>
-                    </li>
-                </ul>
-                {#                        {% else %}#}
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item disable">
-                       <span class="nav-link">
-{#                           {{ user.username }}님 반갑습니다!#}
-                       </span>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/"> 마이페이지 </a>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/logout"> 로그아웃 </a>
-                </li>
-                </ul>
-{#                {% endif %}#}
-            </form>
+                    {% endif %}
+                    <form class="form-inline my-2 my-lg-0">
+                        {% if not user.is_authenticated %}
+                        <ul class="navbar-nav mr-auto">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="{% url 'login' %}"> Login <span class="sr-only"></span></a>
+                            <li class="nav-item active">
+                                <a class="nav-link" href="{% url 'signup' %}"> Sign Up <span class="sr-only"></span></a>
+                            </li>
+                        </ul>
+                        {% else %}
+                        <ul class="navbar-nav mr-auto">
+                            <li class="nav-item disable">
+                                <span class="nav-link">
+                                    {# {{ user.username }}님 반갑습니다!#}
+                                </span>
+                            </li>
+                            <li class="nav-item active">
+                                <a class="nav-link" href="/"> 마이페이지 </a>
+                            <li class="nav-item active">
+                                <a class="nav-link" href="{% url 'logout' %}"> 로그아웃 </a>
+                            </li>
+                        </ul>
+                        {% endif %}
+                    </form>
+                </div>
+
         </div>
+    </nav>
+    {% block content %}
 
-    </div>
-</nav>
-{% block content %}
-
-{% endblock %}
+    {% endblock %}
 
 </body>
-</html>
 
+</html>
