--- a/templates/post/update.html
+++ b/templates/post/update.html
@@ -5,8 +5,8 @@
 {% block content %}
     <div class="container">
         <div class="wrap">
-            <h2 class="title-center"> 게시글 작성 </h2>
-            <form class="form-area" method="post" action="/post/{{post.id}}/update/">
+            <h2 class="title-center"> 게시글 수정 </h2>
+            <form class="form-area" method="post" action="{% url 'post_update' post.id %}">
                 {% csrf_token %}
                     <div class="form-group mt-2 mb-2">
                         <label for="username">제목</label>
