--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -15,7 +15,7 @@
                 </div>
                 <div class="form-group mt-2 mb-2">
                     <label for="user_password">비밀번호</label>
-                    <input type="user_password" class="form-control" id="user_password" name="user_password">
+                    <input type="password" class="form-control" id="user_password" name="user_password">
                 </div>
                 <hr>
                 {% if error %}
@@ -25,7 +25,7 @@
                 {% endif %}
                 <div style="float: right">
                     <button type="submit" class="btn btn-primary">로그인</button>
-                    <a href="/signup" class="btn btn-secondary">회원가입 페이지로</a>
+                    <a href="{%url 'signup' %}" class="btn btn-secondary">회원가입 페이지로</a>
                 </div>
             </form>
 
