--- a/templates/user/signup.html
+++ b/templates/user/signup.html
@@ -16,19 +16,19 @@
                 </div>
                 <div class="form-group mt-2 mb-2">
                     <label for="user_password">비밀번호</label>
-                    <input type="user_password" class="form-control" id="user_password" name="user_password">
+                    <input type="password" class="form-control" id="user_password" name="user_password">
                 </div>
                 <div class="form-group mt-2 mb-2">
                     <label for="user_password2">비밀번호 확인</label>
-                    <input type="user_password" class="form-control" id="user_password2" name="user_password2">
+                    <input type="password" class="form-control" id="user_password2" name="user_password2">
                 </div>
                 <div class="form-group mt-2 mb-2">
                     <label for="user_email">이메일</label>
-                    <input type="user_email" class="form-control" id="user_email" name="user_email">
+                    <input type="email" class="form-control" id="user_email" name="user_email">
                 </div>
                 <div class="form-group mt-2 mb-2">
                     <label for="user_number">전화번호</label>
-                    <input type="user_number" class="form-control" id="user_number" name="user_number">
+                    <input type="tel" class="form-control" id="user_number" name="user_number" placeholder="010-1234-5678" pattern="[0-9]{3}-[0-9]{4}-[0-9]{4}">
                 </div>
 
                 <label for="user_address">지역</label>
@@ -54,7 +54,7 @@
                 <hr>
                 <div style="float: right">
                     <button type="submit" class="btn btn-primary">회원가입</button>
-                    <a href="/login" class="btn btn-secondary">로그인 페이지로</a>
+                    <a href="{%url 'login' %}" class="btn btn-secondary">로그인 페이지로</a>
                 </div>
             </form>
 
