--- a/templates/post/feed.html
+++ b/templates/post/feed.html
@@ -7,9 +7,8 @@
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-lg-6">
                         <h1 class="mt-5">맛있는건 정말 참을 수 없어</h1>
-                        <p>아놔 밑에 글이 엄정 길어야지 위에 제목도 길게 쓸 수 있나보다 아니면 말고 내가 설명을 좀 길게길게 써보지뭐 도대체 기준이뭐임
-                            뭐인것임
-                            정말 모르겠네</p>
+                        <p>전국 방방곳곳 숨은 맛집들이 많다고 본인만 알고 있다가는 가게가 망할 수 있습니다.(경험담)
+                            맛집 사장님들을 혼내줄 수 있는 바로 그 사이트, 나만의 맛집을 자랑해보세요!</p>
                     </div>
                 </div>
 
@@ -22,9 +21,9 @@
                 <div class="col mb-5">
                     <div class="card h-100">
                         <!-- 추천스티커-->
-                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
-                                추천글
-                            </div>
+                        <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
+                            추천글
+                        </div>
                         <!-- 포스트 이미지를 가져오는 곳-->
                         <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..."/>
                         <!-- 포스팅 카드가 보여지는 곳-->
@@ -33,6 +32,8 @@
                                 <!-- 게시글 title-->
                                 <h5 class="fw-bolder">TITLE</h5>
                                 <!-- 게시글 작성자-->
+                                <label for="" class="">지역</label>
+                                <hr>
                                 <label for="" class="">작성자</label>
                             </div>
                         </div>
@@ -52,6 +53,8 @@
                                 <!-- 게시글 title-->
                                 <h5 class="fw-bolder">TITLE</h5>
                                 <!-- 게시글 작성자-->
+                                <label for="" class="">지역</label>
+                                <hr>
                                 <label for="" class="">작성자</label>
                             </div>
                         </div>
@@ -71,6 +74,8 @@
                                 <!-- 게시글 title-->
                                 <h5 class="fw-bolder">TITLE</h5>
                                 <!-- 게시글 작성자-->
+                                <label for="" class="">지역</label>
+                                <hr>
                                 <label for="" class="">작성자</label>
                             </div>
                         </div>
@@ -90,6 +95,8 @@
                                 <!-- 게시글 title-->
                                 <h5 class="fw-bolder">TITLE</h5>
                                 <!-- 게시글 작성자-->
+                                <label for="" class="">지역</label>
+                                <hr>
                                 <label for="" class="">작성자</label>
                             </div>
                         </div>
@@ -102,4 +109,16 @@
             </div>
         </div>
     </div>
+    <nav aria-label="Pagination">
+                        <hr class="my-0" />
+                        <ul class="pagination justify-content-center my-4">
+                            <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1" aria-disabled="true">Newer</a></li>
+                            <li class="page-item active" aria-current="page"><a class="page-link" href="#!">1</a></li>
+                            <li class="page-item"><a class="page-link" href="#!">2</a></li>
+                            <li class="page-item"><a class="page-link" href="#!">3</a></li>
+                            <li class="page-item disabled"><a class="page-link" href="#!">...</a></li>
+                            <li class="page-item"><a class="page-link" href="#!">15</a></li>
+                            <li class="page-item"><a class="page-link" href="#!">Older</a></li>
+                        </ul>
+                    </nav>
 {% endblock %}
