--- a/templates/post/detail.html
+++ b/templates/post/detail.html
@@ -3,13 +3,17 @@
     POST
 {% endblock %}
 {% block content %}
-    <h1>{{post.title}}</h1>
-    <p>{{post.post}}</p>
-    <p>{{post.created_at}}</p>
-    <p>{{post.updated_at}}</p>
-    {% if post.image %}
-        <img src="{{post.image.url}}" alt="">
-    {% endif %}
-    <a href ="/post/{{post.id}}/update">수정</a>
+
+    <div class="card mb-3">
+        <img src="{{post.image.url}}" class="card-img-top" alt="..." style="width:50vw ; max-width:500px">
+        <div class="card-body">
+        <h5 class="card-title">{{post.title}}</h5>
+        <p class="card-text">{{post.post}}</p>
+        <p class="card-text"><small class="text-muted">{{post.created_at}}</small></p>
+        </div>
+        <a href ="{% url 'post_update' id=post.id %}" class="btn btn-outline-dark">수정하기</a>
+        <a href ="{% url 'post_delete' id=post.id %}" class="btn btn-outline-dark">삭제하기</a>
+    </div>
+    <a href ="/post/{{post.id}}/update" class="btn btn-outline-dark">수정</a>
     <a href="/post/{{post.id}}/delete">삭제</a>
 {% endblock %}
