--- a/templates/post/feed2.html
+++ b/templates/post/feed2.html
@@ -18,87 +18,34 @@
     </div>
     <div class="mycards">
         <div class="container px-4 px-lg-5 mt-5">
-            <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-                <div class="col mb-5">
-                    <div class="card h-100">
-                        <!-- 추천스티커-->
-                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
-                                추천글
-                            </div>
-                        <!-- 포스트 이미지를 가져오는 곳-->
-                        <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..."/>
-                        <!-- 포스팅 카드가 보여지는 곳-->
-                        <div class="card-body p-4">
-                            <div class="text-center">
-                                <!-- 게시글 title-->
-                                <h5 class="fw-bolder">TITLE</h5>
-                                <!-- 게시글 작성자-->
-                                <label for="" class="">작성자</label>
-                            </div>
-                        </div>
-                        <!-- 보러가기 버튼-->
-                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">보러가기</a></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col mb-5">
-                    <div class="card h-100">
-                        <!-- 포스트 이미지를 가져오는 곳-->
-                        <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..."/>
-                        <!-- 포스팅 카드가 보여지는 곳-->
-                        <div class="card-body p-4">
-                            <div class="text-center">
-                                <!-- 게시글 title-->
-                                <h5 class="fw-bolder">TITLE</h5>
-                                <!-- 게시글 작성자-->
-                                <label for="" class="">작성자</label>
+            <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">                
+                {% for post in post_list %}
+                    {%if post.region == '서울'%}
+                        <div class="col mb-5">
+                            <div class="card h-100">
+                                <!-- 추천스티커-->
+                                    <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
+                                        추천글
+                                    </div>
+                                <!-- 포스트 이미지를 가져오는 곳-->
+                                <img class="card-img-top" src="{{post.image.url}}" alt="..."/>
+                                <!-- 포스팅 카드가 보여지는 곳-->
+                                <div class="card-body p-4">
+                                    <div class="text-center">
+                                        <!-- 게시글 title-->
+                                        <h5 class="fw-bolder">{{post.title}}</h5>
+                                        <!-- 게시글 작성자-->
+                                        <label for="" class="">{{post.user}}</label>
+                                    </div>
+                                </div>
+                                <!-- 보러가기 버튼-->
+                                <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{% url 'post' id=post.id %}">보러가기</a></div>
+                                </div>
                             </div>
                         </div>
-                        <!-- 보러가기 버튼-->
-                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">보러가기</a></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col mb-5">
-                    <div class="card h-100">
-                        <!-- 포스트 이미지를 가져오는 곳-->
-                        <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..."/>
-                        <!-- 포스팅 카드가 보여지는 곳-->
-                        <div class="card-body p-4">
-                            <div class="text-center">
-                                <!-- 게시글 title-->
-                                <h5 class="fw-bolder">TITLE</h5>
-                                <!-- 게시글 작성자-->
-                                <label for="" class="">작성자</label>
-                            </div>
-                        </div>
-                        <!-- 보러가기 버튼-->
-                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">보러가기</a></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col mb-5">
-                    <div class="card h-100">
-                        <!-- 포스트 이미지를 가져오는 곳-->
-                        <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..."/>
-                        <!-- 포스팅 카드가 보여지는 곳-->
-                        <div class="card-body p-4">
-                            <div class="text-center">
-                                <!-- 게시글 title-->
-                                <h5 class="fw-bolder">TITLE</h5>
-                                <!-- 게시글 작성자-->
-                                <label for="" class="">작성자</label>
-                            </div>
-                        </div>
-                        <!-- 보러가기 버튼-->
-                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">보러가기</a></div>
-                        </div>
-                    </div>
-                </div>
+                    {%endif%}
+                {% endfor %}                
             </div>
         </div>
     </div>
