--- a/templates/post/feed.html
+++ b/templates/post/feed.html
@@ -8,7 +8,7 @@
                     <div class="col-lg-6">
                         <h1 class="mt-5">맛있는건 정말 참을 수 없어</h1>
                         <p>전국 방방곳곳 숨은 맛집들이 많다고 본인만 알고 있다가는 가게가 망할 수 있습니다.(경험담)
-                            맛집 사장님들을 혼내줄 수 있는 바로 그 사이트, 나만의 맛집을 자랑해보세요!</p>
+                            맛집 사장님들을 혼내줄 수 있는 바로 그 사이트, 나만의 맛집을 자랑해보세요! 얍</p>
                     </div>
                 </div>
 
