--- a/templates/base.html
+++ b/templates/base.html
@@ -35,19 +35,19 @@
             background-position: center;
             background-size: cover;
         }
+        .mycards {
 
-                .mycards {
-            width: 1000px;
-            margin: 100px auto 100px auto;
+        width: 100%;
+        margin: 150px auto 80px auto;
 
         }
 
         .card {
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            width: 250px;
-            gap: 20px; /* 카드 간격 조절 */
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        width: 250px;
+        gap: 20px; /* 카드 간격 조절 */
         }
 
         .pagination .page-link {
@@ -79,15 +79,27 @@
 
             z-index: 999;
         }
+        footer {
+            margin-top: 80px;
+            /* bottom: 0; */
+            width: 100%;
+           
+        }
     </style>
+    <script>
+        let select_box = document.getElementId()
+        
+    </script>
 </head>
 
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light">
     <div class="container px-4 px-lg-5">
-{#        <--!타이틀-->#}
-        <a class="navbar-brand" href="#!">친한사2조</a>
-        {#                {% if  user.is_authenticated %}#}
+<!-- {#        <--!타이틀-->#} -->
+    <a href="/"><img src="https://file.notion.so/f/s/60c8981a-2e30-409a-8b9f-439580f0d215/Untitled.png?id=b3ad29f0-0075-4bd7-bd20-06adb10edebd&table=block&spaceId=24c771f9-c044-4d63-851f-660172d58cb7&expirationTimestamp=1681351774914&signature=BMnKNRhDX1zzn0pDTnC2OIzY85dtQph3CxOz0uCk1Y8&downloadName=Untitled.png"
+                 alt="상단로고" width="70"></a>
+        <a class="navbar-brand" href="/">친한사2조</a>
+        {% if  user.is_authenticated %}
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
                 class="navbar-toggler-icon"></span></button>
@@ -98,8 +110,9 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
                        data-bs-toggle="dropdown" aria-expanded="false">지역선택</a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown" id="region-box" onchange="changeEvent()">
                         <li><a class="dropdown-item" href="#!">모든 지역</a></li>
+                        <div class="dropdown-divider"></div>
                         <li><a class="dropdown-item" href="#!">서울</a></li>
                         <li><a class="dropdown-item" href="#!">경기도</a></li>
                         <li><a class="dropdown-item" href="#!">강원도</a></li>
@@ -110,22 +123,22 @@
                     </ul>
                 </li>
             </ul>
-            {#                    {% endif %}#}
+            {% endif %}
             <form class="form-inline my-2 my-lg-0">
-                {#                        {% if not user.is_authenticated %}#}
+                {% if not user.is_authenticated %}
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="/sign-in"> Sign In <span class="sr-only"></span></a>
+                        <a class="nav-link" href="{% url 'login'%}"> 로그인 <span class="sr-only"></span></a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="/sign-up"> Sign Up <span class="sr-only"></span></a>
+                        <a class="nav-link" href="{% url 'signup'%}"> 회원가입 <span class="sr-only"></span></a>
                     </li>
                 </ul>
-                {#                        {% else %}#}
+                {% else %}
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item disable">
                        <span class="nav-link">
-{#                           {{ user.username }}님 반갑습니다!#}
+                           {{ user.username }}님 반갑습니다!
                        </span>
                     </li>
                     <li class="nav-item active">
@@ -134,7 +147,7 @@
                         <a class="nav-link" href="/logout"> 로그아웃 </a>
                 </li>
                 </ul>
-{#                {% endif %}#}
+                {% endif %}
             </form>
         </div>
     </div>
@@ -142,7 +155,23 @@
 {% block content %}
 
 {% endblock %}
-
+<div class="jumbotron text-center mt-5 mb-0">
+    <footer class="py-5 bg-dark">
+        <h3 class="m-0 text-center text-white">친한사2조</h3>
+        <div class="container">
+            <div class="jumbotron text-center mt-5 mb-0">
+                <div class="mem_list">
+                    <p class="m-0 text-center text-white">박진식 <a href="https://velog.io/@dkdnl369">BLOG</a>
+                    <p class="m-0 text-center text-white">김근혜 <a href="https://sw-ing.tistory.com">BLOG</a>
+                    <p class="m-0 text-center text-white">김민경 <a href="https://velog.io/@plumeriaa">BLOG</a>
+                    <p class="m-0 text-center text-white">정승호 <a href="https://teapackage.tistory.com/">BLOG</a>
+                    <p class="m-0 text-center text-white">박소진 <a
+                            href="https://right-otter-1b4.notion.site/Sparta-f505fc85ac5145fe9104a6e2abef444d">BLOG</a>
+                    <p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
+            </div>
+        </div>
+    </footer>
+</div>
 
 </body>
 
