--- a/templates/account/profile_edit.html
+++ b/templates/account/profile_edit.html
@@ -1,6 +1,8 @@
+{% extends 'base.html' %}
+{% block content %}
 <form method="post">
   {% csrf_token %}
-  <div style="display: flex; flex-direction: column; max-width: 600px; margin: 0 auto;">
+  <div style="display: flex; flex-direction: column; width: 100%; margin: 0 auto;">
     <label for="{{ form.name.id_for_label }}">이름:</label>
     {{ form.name }}
     <label for="{{ form.location.id_for_label }}">지역:</label>
@@ -12,3 +14,4 @@
     <button type="submit" style="margin-top: 10px;">저장</button>
   </div>
 </form>
+{% endblock %}
