--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://file.notion.so/f/s/bdbe0771-ce9d-456e-b4f5-5710620b8381/Untitled.jpeg?id=1c0d6939-9470-4897-a6c3-8226f9dfe574&table=block&spaceId=24c771f9-c044-4d63-851f-660172d58cb7&expirationTimestamp=1681353681852&signature=6Nk64PqQL6JEcmCjD-G9E93XJmrb-Lji9K-VHBCWCKg&downloadName=Untitled.jpeg);
+            background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://file.notion.so/f/s/bdbe0771-ce9d-456e-b4f5-5710620b8381/Untitled.jpeg?id=1c0d6939-9470-4897-a6c3-8226f9dfe574&table=block&spaceId=24c771f9-c044-4d63-851f-660172d58cb7&expirationTimestamp=1681448996871&signature=H5osHcjua4X2w0egBKdjh9YwNVkvGpzHX4VaqFBTwJA&downloadName=Untitled.jpeg);
             background-position: center;
             background-size: cover;
         }
@@ -70,6 +70,12 @@
             color: black;
         }
 
+        .col-lg-4 {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+        }
+
         .wrap {
             width: 400px;
             margin: 0 auto;
@@ -99,7 +105,33 @@
             transform:scale(1.1);
             transition: transform 0.3s ease-in-out;
         }
-
+       
+      .mypage_body {
+        width: 100%;
+        margin: 0 auto;
+        /* font-family: sans-serif; */
+        font-size: 18px;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        line-height: 1.5;
+        padding: 20px;
+      }
+      /* h1 {
+        font-size: 32px;
+        margin-bottom: 20px;
+        text-align: center;
+      }
+      p {
+        margin-bottom: 10px;
+      }
+      a {
+        display: block;
+        text-align: center;
+        margin-top: 20px;
+        font-weight: bold;
+      } */
+    </style>
     </style>
 </head>
 
@@ -107,7 +139,7 @@
 <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container px-4 px-lg-5">
 <!-- {#        <--!타이틀-->#} -->
-    <a href="/"><img src="https://file.notion.so/f/s/60c8981a-2e30-409a-8b9f-439580f0d215/Untitled.png?id=b3ad29f0-0075-4bd7-bd20-06adb10edebd&table=block&spaceId=24c771f9-c044-4d63-851f-660172d58cb7&expirationTimestamp=1681351774914&signature=BMnKNRhDX1zzn0pDTnC2OIzY85dtQph3CxOz0uCk1Y8&downloadName=Untitled.png"
+    <a href="/"><img src="https://file.notion.so/f/s/60c8981a-2e30-409a-8b9f-439580f0d215/Untitled.png?id=b3ad29f0-0075-4bd7-bd20-06adb10edebd&table=block&spaceId=24c771f9-c044-4d63-851f-660172d58cb7&expirationTimestamp=1681440285377&signature=xp7oPlJZe8-3j6R3WSN2WtbrAT33KsFCJqGVzpCga5k&downloadName=Untitled.png"
                  alt="상단로고" width="70"></a>
         <a class="navbar-brand" href="/">친한사2조</a>
         {% if  user.is_authenticated %}
@@ -152,7 +184,7 @@
                        </span>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="/"> 마이페이지 </a>
+                        <a class="nav-link" href="{% url 'profile' %}"> 마이페이지 </a>
                     <li class="nav-item active">
                         <a class="nav-link" href="/logout"> 로그아웃 </a>
                 </li>
