--- a/templates/post/detail.html
+++ b/templates/post/detail.html
@@ -11,10 +11,13 @@
         </div>
         <div style="float: right">
             <p class="card-text"><small class="text-muted">{{post.created_at}}</small></p>
-            <a href ="{% url 'post_update' id=post.id %}" class="btn btn-outline-dark" data-bs-toggle="modal" data-bs-target="#exampleModal">수정하기</a>
-            <a href ="{% url 'post_delete' id=post.id %}" class="btn btn-outline-dark">삭제하기</a>
+            {% if post.user == request.user %}
+                <a href ="{% url 'post_update' id=post.id %}" class="btn btn-outline-dark" data-bs-toggle="modal" data-bs-target="#exampleModal">수정하기</a>
+                <a class="btn btn-outline-dark" data-bs-toggle="modal" data-bs-target="#staticBackdrop">삭제하기</a>
+            {% endif %}
         </div>
 
+        <!-- 수정하기 Modal -->
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -62,6 +65,25 @@
                         </div>
                     </form>
                 </div>
+            </div>
+        </div>
+
+        <!-- 삭제하기 Modal -->    
+        <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="staticBackdropLabel">삭제하기</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  정말 삭제하시겠어요?
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-outline-dark" data-bs-dismiss="modal">닫기</button>
+                  <a href ="{% url 'post_delete' id=post.id %}"  type="button" class="btn btn-outline-dark">삭제하기</a>
+                </div>
+              </div>
             </div>
         </div>
     </div>    
