--- a/templates/css/style.css
+++ b/templates/css/style.css
@@ -68,3 +68,20 @@
 
             z-index: 999;
         }
+
+/*로그인 페이지*/
+        .bg-image-vertical {
+        position: relative;
+        overflow: hidden;
+        background-repeat: no-repeat;
+        background-position: right center;
+        background-size: auto 100%;
+        }
+
+        @media (min-width: 1025px) {
+        .h-custom-2 {
+        height: 100%;
+        }
+        }
+
+/*회원가입 페이지*/
