--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -4,6 +4,52 @@
     로그인
 {% endblock %}
 {% block content %}
+
+
+    <section class="vh-100">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-6 px-0 d-none d-sm-block">
+                    <img src="https://www.shutterstock.com/ko/blog/wp-content/uploads/sites/17/2018/11/shutterstock_735067627.jpg?resize=1536,1021"
+                         alt="Login image" class="w-100 vh-100" style="object-fit: cover; object-position: center;">
+                    </div>
+                <div class="col-sm-6 text-black">
+                    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+                    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+                    <div class="d-flex align-items-center h-custom-2 px-5 ms-xl-4 mt-5 pt-5 pt-xl-0 mt-xl-n5">
+                        <form style="width: 23rem;">
+                            <h3 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">로그인</h3>
+                            <form class="form-area" action="/login/" method="post">
+                                {% csrf_token %}
+                                <div class="form-outline mb-4">
+                                    <i class="material-icons" style="font-size:24px">account_box</i>
+                                    <label class="form-label" for="user_name">아이디</label>
+                                    <input type="text" id="user_name" class="form-control form-control-lg"/>
+                                </div>
+                                <div class="form-outline mb-4">
+                                    <i class="fa fa-key" style="font-size:24px"></i>
+                                    <label class="form-label" for="user_password">비밀번호</label>
+                                    <input type="password" id="user_password" class="form-control form-control-lg"/>
+                                </div>
+                                {% if error %}
+                                    <div class="alert alert-danger" role="alert">
+                                        {{ error }}
+                                    </div>
+                                {% endif %}
+                                <div style="float: right">
+                                    <button type="submit" class="btn" style="background-color:Tomato; color:White">로그인</button>
+                                    <a href="{% url 'signup' %}" class="btn btn-secondary">회원가입 페이지로</a>
+                                </div>
+                            </form>
+                        </form>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <!--
     <div class="container">
         <div class="wrap">
             <h2 class="title-center"> 로그인</h2>
