feat/ button color change

--- a/templates/account/profile.html
+++ b/templates/account/profile.html
@@ -12,8 +12,8 @@
       <p class="text-muted mb-4">{{ user.address }}</p>
         <p class="text-muted mb-4">{{ user.email }}</p>
       <div class="d-flex justify-content-center mb-2">
-          <button type="button" class="btn btn-primary">Follow</button>
-          <button type="button" a class="btn btn-primary" href="{% url 'profile_edit' %}">프로필 수정</button></a>
+          <button type="submit" class="btn me-2" style="background-color:darkorange; color:White">Follow</button>
+          <button type="button" class="btn btn-secondary" href="{% url 'profile_edit' %}">프로필 수정</button></a>
       </div>
     </div>
   </div>
