--- a/templates/account/profile_edit.html
+++ b/templates/account/profile_edit.html
@@ -11,7 +11,7 @@
     {{ form.email }}
     <label for="{{ form.content.id_for_label }}">내용:</label>
     {{ form.content }}
-    <button type="submit" style="margin-top: 10px;">저장</button>
+    <button type="submit" class="btn me-2" style="background-color:darkorange; color:White; margin-top: 10px;">저장</button>
   </div>
 </form>
 {% endblock %}
