--- a/templates/post/create.html
+++ b/templates/post/create.html
@@ -25,8 +25,8 @@
                     </select>    
                     <hr>        
                     <label>이미지</label>
-                    <div class="input-group mb-3">
-                        <input type="file" class="form-control" id="inputGroupFile02" name="image">                        
+                    <div class="input-group mb-3" >
+                        <input type="file" class="form-control" id="inputGroupFile02" name="image">
                     </div>
                     <label>설명</label>
                     <div class="form-floating">
@@ -40,8 +40,8 @@
                         </div>
                     {% endif %}
                     <div style="float: right">
-                    <button type="submit" class="btn btn-outline-dark">등록하기</button>
-                    <a href="/" class="btn btn-outline-dark">취소하기</a>
+                    <button type="submit" class="btn me-2" style="background-color:darkorange; color:White">등록하기</button>
+                    <a href="/" class="btn btn-secondary">취소하기</a>
                 </div>
             </form>
         </div>
