--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -37,7 +37,7 @@
                                     </div>
                                 {% endif %}
                                 <div style="float: right">
-                                    <button type="submit" class="btn" style="background-color:Tomato; color:White">로그인</button>
+                                    <button type="submit" class="btn me-2" style="background-color:darkorange; color:White">로그인</button>
                                     <a href="{% url 'signup' %}" class="btn btn-secondary">회원가입 페이지로</a>
                                 </div>
                             </form>
