my post on mypage

--- a/templates/post/detail.html
+++ b/templates/post/detail.html
@@ -132,11 +132,11 @@
 </div>
 
 <style>
-.test{
+.comm{
     border:none;
     width:100%;
 }
-.test:focus{
+.comm:focus{
     outline:none !important;
 }
 </style>
